# yai-nexus-api-middleware

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  wait_for_approve.md  wait_for_coding.md  wait_for_comment.md  wait_for_comment_2.md  wait_for_comment_3.md
.claude/: settings.local.json
.cursor/rules/: yai-open-source.mdc
.github/workflows/: pypi-publish.yml
examples/: simple_usage.py
old/middlewares/: __init__.py  middleware.py  middleware_identity_parser.py  middleware_request_logging.py  middleware_trace_parser.py  router_manager.py
old/middlewares/model/: gateway_response.py  models.py  page_data.py
src/yai_nexus_api_middleware/: __init__.py  builder.py  context.py  decorators.py  dependencies.py  models.py  responses.py
src/yai_nexus_api_middleware/internal/: core_handlers.py  core_middleware.py  handlers.py  standard_response.py  standard_response_handler.py
tests/: __init__.py
tests/examples/: __init__.py  test_simple_usage_example.py
tests/integration/: test_simple_middleware_integration.py
tests/unit/: __init__.py  test_builder.py  test_dependencies.py  test_models.py  test_responses.py
