[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yai_nexus_api_middleware"
version = "0.1.0"
description = "A modern, fluent, and elegant API middleware for FastAPI, built for the yai-nexus ecosystem."
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi",
    "pydantic",
    "yai-nexus-logger",
    "yai-nexus-configuration",
]

[project.urls]
"Homepage" = "https://github.com/your-org/yai-nexus-api-middleware"
"Bug Tracker" = "https://github.com/your-org/yai-nexus-api-middleware/issues"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
] 