[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yai-nexus-api-middleware"
version = "0.1.0"
description = "FastAPI middleware for Y-AI Nexus"
authors = [
    { name = "Y-AI Nexus", email = "dev@y-ai.ltd" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "yai-nexus-logger==0.2.2",
]

[project.urls]
"Homepage" = "https://github.com/your-org/yai-nexus-api-middleware"
"Bug Tracker" = "https://github.com/your-org/yai-nexus-api-middleware/issues"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[project.optional-dependencies]
# ... existing code ... 